hphp/test/zend/good/tests-run-test/test006.php
<?php
// If this test fails ask the developers of run-test.php
$error = 1 / 0;
?>