hphp/test/zend/bad/ext/spl/tests/spl_heap_count_error.php
<?php
$h = new SplPriorityQueue();
$h->count(1);
?>